--- a/power_analysis/old/power_analysis_binomial_GLMM_Roger.Rmd
+++ b/power_analysis/old/power_analysis_binomial_GLMM_Roger.Rmd
@@ -27,7 +27,7 @@ n.per.subject <- 18 # observations per subject
 n.per.condition <- 18 # observations per subject and condition
 subj.id <- as.factor(paste("subj", 1:n.subject, sep = "."))
 age_range <- c(12:31) # age range between 8 and 40
-control.per <- 1 / 3 # performance in control condition
+control.per <- 1/3 # performance in control condition
 test.per <- 0.55 # performance in test condition
 
 start.data <- data.frame(subj.id)
@@ -39,32 +39,41 @@ names(start.data) <- "subj.id"
 # add condition and trial number
 start.data <- data.frame(expand.grid(subj.id = subj.id, condition = c("control", "test"), trial = c(1:n.per.condition)))
 
-# add order
-start.data$order <- as.factor(rep(x = c("test_first", "control_first"), times = n.subject / 2))[as.numeric(start.data$subj.id)]
+# add age
+age <- sample(x = age_range, size = length(unique(start.data$subj.id)), replace = T)
+start.data$age <- as.numeric(age[as.numeric(start.data$subj.id)])
 
-start.data$order2 <- ifelse((start.data$order == "test_first" & start.data$condition == "test") |
-  (start.data$order == "control_first" & start.data$condition == "control"), 1, 2)
+# add sex
+sex <- sample(x = c("F", "M"), size = length(unique(start.data$subj.id)), replace = T)
+start.data$sex <- as.factor(sex[as.numeric(start.data$subj.id)])
 
+## add order
+start.data$order <- as.factor(rep(x = c("test_first", "control_first"), times = nrow(start.data) / 2))
+##roger: this last line is a little 'dangerous' as it relies on the fact that start.data comprises individuals in the form
+	##1, 2, 3... and this repeated multiple times
+	##a safer way is:
+	as.factor(rep(x = c("test_first", "control_first"), times = n.subject / 2))[as.numeric(start.data$subj.id)]
+	
+	
+start.data <- start.data %>%
+  mutate(order2 = as.numeric(ifelse(order == "test_first" & condition == "test", "1", ifelse(order == "test_first" & condition == "control", "2", ifelse(order == "control_first" & condition == "control", "1", ifelse(order == "control_first" & condition == "test", "2", ""))))))
+##roger: this last line seems unnecessarily complicated to me
+	##you could also use
+  start.data$order2=ifelse((start.data$order == "test_first" & start.data$condition == "test") |
+		(start.data$order == "control_first" & start.data$condition == "control"), 1, 2)
 
-# add demographics  (if it should be generated in each loop)
-chimp.demo <- read.csv("data/chimp_demographics.csv")
-start.data$subject_name <- as.factor(rep(x = chimp.demo$Subject, times = n.per.subject))[as.numeric(start.data$subj.id)]
-start.data$age <- as.numeric(rep(x = chimp.demo$Age, times = n.per.subject))[as.numeric(start.data$subj.id)]
-start.data$sex <- as.factor(rep(x = chimp.demo$Sex, times = n.per.subject))[as.numeric(start.data$subj.id)]
+#z-transformation of covariates
+start.data$z.age=as.vector(scale(start.data$age))
+start.data$z.trial=as.vector(scale(start.data$trial))
+start.data$z.order=as.vector(scale(as.numeric(start.data$order2)))
 
+#dummy code factors
+start.data$condition.dummy=as.numeric(start.data$condition==levels(start.data$condition)[2])
+start.data$order.dummy=as.numeric(start.data$order==levels(start.data$order)[2])
 
-# z-transformation of covariates
-start.data$z.age <- as.vector(scale(start.data$age))
-start.data$z.trial <- as.vector(scale(start.data$trial))
-start.data$z.order <- as.vector(scale(as.numeric(start.data$order2)))
-
-# dummy code factors
-start.data$condition.dummy <- as.numeric(start.data$condition == levels(start.data$condition)[2])
-start.data$order.dummy <- as.numeric(start.data$order == levels(start.data$order)[2])
-
-# center condition for random slopes:
-start.data$condition.c <- as.numeric(start.data$condition) - mean(as.numeric(start.data$condition))
-start.data$order.c <- as.numeric(start.data$order) - mean(as.numeric(start.data$order))
+#center condition for random slopes:
+start.data$condition.c=as.numeric(start.data$condition)-mean(as.numeric(start.data$condition))
+start.data$order.c=as.numeric(start.data$order)-mean(as.numeric(start.data$order))
 
 # checks:
 # does each subject have only one sex and age?
@@ -178,20 +187,13 @@ for (i in 1:nrow(all.res)) {
 
   # xdata <- start.data[rep(x = 1:nrow(start.data), each = all.res[i, "n.per.subject"]), ]  # replicate rows in start.data according to sample size
 
-  # add age  (if it should be generated in each loop)
-  # age <- sample(x = age_range, size = length(unique(start.data$subj.id)), replace = T)
-  # start.data$age <- as.numeric(age[as.numeric(start.data$subj.id)])
-  # add sex (if it should be generated in each loop)
-  # sex <- sample(x = c("F", "M"), size = length(unique(start.data$subj.id)), replace = T)
-  # start.data$sex <- as.factor(sex[as.numeric(start.data$subj.id)])
-
   LP <- m.mat[, names(coefs)] %*% coefs # LP wrt fixed effects
-
+  
   # add random effect to linear predictor:
-  LP <- LP + rnorm(n = n.subject, sd = all.res[i, "r.effect"])[as.numeric(xdata$subj.id)] +
-    rnorm(n = n.subject, sd = all.res[i, "r.slope.con"])[as.numeric(xdata$subj.id)] * xdata$condition.dummy +
-    rnorm(n = n.subject, sd = all.res[i, "r.slope.trial"])[as.numeric(xdata$subj.id)] * xdata$z.trial #+
-  # rnorm(n = n.subject, sd = all.res[i, "r.slope.order"])[as.numeric(xdata$subj.id)]*xdata$z.order
+  LP <- LP + rnorm(n = n.subject, sd = all.res[i, "r.effect"])[as.numeric(xdata$subj.id)] + 
+    rnorm(n = n.subject, sd = all.res[i, "r.slope.con"])[as.numeric(xdata$subj.id)]*xdata$condition.dummy +
+    rnorm(n = n.subject, sd = all.res[i, "r.slope.trial"])[as.numeric(xdata$subj.id)]*xdata$z.trial #+
+    #rnorm(n = n.subject, sd = all.res[i, "r.slope.order"])[as.numeric(xdata$subj.id)]*xdata$z.order 
 
   # generate response:
   xdata$correct <- rbinom(n = nrow(xdata), size = 1, prob = exp(LP) / (1 + exp(LP)))
@@ -201,17 +203,17 @@ for (i in 1:nrow(all.res)) {
     data = xdata, family = binomial, control = contr
   ))
   # fit null model:
-  null <- keepWarnings(glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
+    null <- keepWarnings(glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
     data = xdata, family = binomial, control = contr
   ))
-
+    
   # store results:
   all.res[i, c("icpt", "conditiontest", "z.age", "sexM", "z.trial", "ordertest_first")] <- fixef(full$value)
   all.res[i, "re.sd"] <- as.data.frame(summary(full$value)$varcor)[1, "sdcor"]
   all.res[i, "warns.full"] <- nchar(paste(full$warnings, collapse = ""))
   all.res[i, "warns.null"] <- nchar(paste(null$warnings, collapse = ""))
-  all.res[i, "lrt.p.con"] <- as.data.frame(drop1(full$value, test = "Chisq"))["condition", "Pr(Chi)"]
-  all.res[i, "full.null.p"] <- as.data.frame(anova(null$value, full$value, test = "Chisq"))[2, "Pr(>Chisq)"]
+  all.res[i, "lrt.p.con"] <- as.data.frame(drop1(full$value, test="Chisq"))["condition", "Pr(Chi)"]
+  all.res[i, "full.null.p"] <- as.data.frame(anova(null$value, full$value, test="Chisq"))[2, "Pr(>Chisq)"]
 }
 
 
