--- a/analysis/disjSyl_analysis_script.Rmd
+++ b/analysis/disjSyl_analysis_script.Rmd
@@ -1,6 +1,6 @@
 ---
 title: " binomial GLMM"
-author: ""
+author: "Hanna Schleihauf, Lou Haux, Christoph Völter"
 date: "31/05/2020"
 output: 
   html_document:
@@ -16,83 +16,120 @@ library(tidyverse)
 library(lme4)
 library("lme4")
 library("effects")
-#source("/Users/HannaSchleihauf/Dropbox/Research/EVAClass/Functions/diagnostic_fcns.r")
+library("aod")
+library("car")
+source("./functions/diagnostic_fcns.r")
+source("./functions/glmm_stability.r")
+source("./functions/boot_glmm.r")
+source("./functions/drop1_para.r")
 ```
 
 **Load and clean up data**
 ```{r}
-#load data
-xdata = read.csv("data/dummy_data.csv",  na= c("NA"))
+# load data
+xdata <- read.csv("data/dummy_data.csv", na = c("NA")) 
 str(xdata)
-#z-tranform covariates and create new variables for them
-xdata$z.age = scale(xdata$age)
-xdata$z.trial = scale(xdata$trial)
-xdata$z.order = scale(xdata$order2)
-#transform character variables into factors
-xdata$subj.id = as.factor(xdata$subj.id)
-xdata$condition = as.factor(xdata$condition)
-xdata$order = as.factor(xdata$order)
-xdata$sex = as.factor(xdata$sex)
-#create dummy variables and centered dummy variables for the factors which are included in random slopes
-xdata$condition.dummy=as.numeric(xdata$condition==levels(xdata$condition)[2])
-xdata$condition.c = xdata$condition.dummy-mean(xdata$condition.dummy)
+# z-tranform covariates and create new variables for them
+xdata$z.age <- scale(xdata$age)
+xdata$z.trial <- scale(xdata$trial)
+# transform character variables into factors
+xdata$subj.id <- as.factor(xdata$subj.id)
+xdata$condition <- as.factor(xdata$condition) # only for Experiment 3 and 4
+xdata$order <- as.factor(xdata$order) # only for Experiment 3 and 4
+xdata$sex <- as.factor(xdata$sex)
+# create dummy variables and centered dummy variables for the factors which are included in random slopes
+xdata$condition.dummy <- as.numeric(xdata$condition == levels(xdata$condition)[2])
+xdata$condition.c <- xdata$condition.dummy - mean(xdata$condition.dummy)
+```
+
+**For Experiment 1 & 2**
+*Fitting the intercept-only model*
+```{r}
+
+# this control term will be needed in case of convergance issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+chance.test <- glmer(correct ~ 1 +
+  (1 + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+
+summary(chance.test)
+```
+
+
+**For Experiment 3 and 4**
+
+**Chance level (0.5) comparision for the test condition**
+*Subsetting the data set*
+```{r}
+xdata.test <- subset(xdata, xdata$condition == "test")
+```
+
+*Fitting the intercept only model*
+```{r}
+chance.test <- glmer(correct ~ 1 +
+  (1 + z.trial || subj.id),
+data = xdata.test, family = binomial, control = contr
+)
+
+summary(chance.test)
 ```
 
 **Comparision of test condition and control condition**
 *Fitting the full model*
 ```{r echo=FALSE}
-  #this control term will be needed in case of convergance issues
-  contr=glmerControl(optimizer="bobyqa", optCtrl=list(maxfun=10000000))
+# this control term will be needed in case of convergance issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
-  # fit full model:  ####Sind wir hier sicher, dass wir keine interactionen drin haben wollen???
-  full <- glmer(correct ~ condition + z.age + sex + z.trial + order + 
-                  (1 + condition.c + z.trial || subj.id),
-    data = xdata, family = binomial, control = contr
-  )
-  ##in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergance issues or sigular fit messages. 
+# fit full model:
+full <- glmer(correct ~ condition + z.age + sex + z.trial + order +
+  (1 + condition.c + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergance issues or sigular fit messages.
 ```
 
 *Checking whether assumptions are fullfilled*
 ```{r}
-  #checking absence of overdispersion
-  overdisp.test(full) 
-  #check for colliniarity
-  xx=lm(correct ~ condition + z.age + sex + z.trial + order,
-      data=xdata)
-  library("car")
-  vif(xx)
-  #checking random intercept and slopes
-  summary(full)$varcor
-  ranef.diagn.plot(full)
-  #checking model stability
-  source("/Users/HannaSchleihauf/Dropbox/Research/EVAClass/Functions/glmm_stability.r")
-  m.stab.b=glmm.model.stab(model.res=full, contr=contr, use=c("subj.id"))  
-  m.stab.b$detailed$warnings
-  xx=as.data.frame(round(m.stab.b$summary[, -1], 3))
-  m.stab.plot(round(m.stab.b$summary[, -1], 3))
+
+# check for colliniarity
+xx <- lm(correct ~ condition + z.age + sex + z.trial + order,
+  data = xdata
+)
+vif(xx)
+# checking random intercept and slopes
+summary(full)$varcor
+ranef.diagn.plot(full)
+# checking model stability
+m.stab.b <- glmm.model.stab(model.res = full, contr = contr, use = c("subj.id"))
+m.stab.b$detailed$warnings
+xx <- as.data.frame(round(m.stab.b$summary[, -1], 3))
+m.stab.plot(round(m.stab.b$summary[, -1], 3))
 ```
 
 *Fitting the null model*
 ```{r}
-  # fit null model:
-    null <- glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
-    data = xdata, family = binomial, control = contr
-  )
+# fit null model:
+null <- glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
+  data = xdata, family = binomial, control = contr
+)
 ```
 
 *Comparing full and null model*
 ```{r}
-round(anova(full, null, test="Chisq"), 3)
+round(anova(full, null, test = "Chisq"), 3)
 ```
 
 *Comparing full and reduced models to get the effects of single predictors*
 ```{r}
-##load function that drops one predictor at the time and compares it with the full model
-source("/Users/HannaSchleihauf/Dropbox/Research/EVAClass/Functions/drop1_para.r") 
-tests=drop1p(model.res=full, para=F, data=NULL, contr=contr, 
-             n.cores=c("all-1"), to.del=NULL)
+
+tests <- drop1p(
+  model.res = full, para = F, data = NULL, contr = contr,
+  n.cores = c("all-1"), to.del = NULL
+)
 round(tests$drop1.res, 3)
-##graphical dipiction of the effects
+## graphical dipiction of the effects
 plot(effect("condition", full))
 plot(effect("z.age", full))
 plot(effect("sex", full))
@@ -107,58 +144,40 @@ round(summary(full)$coefficients, 3)
 
 *Calculating confidence intervals with 1000 bootstraps*
 ```{r}
-#load function to perform bootstraps
-source("/Users/HannaSchleihauf/Dropbox/Research/EVAClass/Functions/boot_glmm.r")
-#perform bootstraps for all predictors
-boot.res=boot.glmm.pred(model.res=full, excl.warnings=T,
-                        nboots=1000, para=F, level=0.95, 
-                        use=c("condition", "z.age", "sex","z.trial", "order"))
+
+# perform bootstraps for all predictors
+boot.res <- boot.glmm.pred(
+  model.res = full, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95
+)
 round(boot.res$ci.estimates, 3)
-xx=as.data.frame(round(boot.res$ci.estimates, 3))
+xx <- as.data.frame(round(boot.res$ci.estimates, 3))
 xx
 m.stab.plot(round(boot.res$ci.estimates, 3))
 
-#perform bootstraps for the main predictor of interest: condition (with the other predictors being at their average), this is necessary to plot the effect of condition
-#dummy code and center all factors but condition
-xdata$order.dummy=as.numeric(xdata$order==levels(xdata$order)[2])
-xdata$order.c = xdata$order.dummy-mean(xdata$order.dummy)
-xdata$sex.dummy=as.numeric(xdata$sex==levels(xdata$sex)[2])
-xdata$sex.c = xdata$sex.dummy-mean(xdata$sex.dummy)
-#fit model with centered predictors
-full.plot <- glmer(correct ~ condition + z.age + sex.c + z.trial + order.c + 
-                  (1 + condition.c + z.trial || subj.id),
-    data = xdata, family = binomial, control = contr
-  )
-#performm bootstrap
-boot.res.plot=boot.glmm.pred(model.res=full.plot, excl.warnings=T,
-                        nboots=1000, para=F, level=0.95, 
-                        use=c("condition"))
+# perform bootstraps for the main predictor of interest: condition (with the other predictors being at their average), this is necessary to plot the effect of condition
+# dummy code and center all factors but condition
+xdata$order.dummy <- as.numeric(xdata$order == levels(xdata$order)[2])
+xdata$order.c <- xdata$order.dummy - mean(xdata$order.dummy)
+xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
+xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
+# fit model with centered predictors
+full.plot <- glmer(correct ~ condition + z.age + sex.c + z.trial + order.c +
+  (1 + condition.c + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+# performm bootstrap
+boot.res.plot <- boot.glmm.pred(
+  model.res = full.plot, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95,
+  use = c("condition")
+)
 round(boot.res.plot$ci.estimates, 3)
-xx=as.data.frame(round(boot.res.plot$ci.estimates, 3))
+xx <- as.data.frame(round(boot.res.plot$ci.estimates, 3))
 xx
 m.stab.plot(round(boot.res.plot$ci.estimates, 3))
 ```
 
-**Chance level (0.5) comparision for the test condition**
-*Subsetting the data set*
-```{r}
-xdata.test = subset(xdata, xdata$condition == "test")
-```
 
-*Fitting the intercept only model*
-```{r}
-chance.test <-  glmer(correct ~ 1 + 
-                  (1 + z.trial || subj.id),
-    data = xdata.test, family = binomial, control = contr
-)
 
-summary(chance.test)
-##
-##Lieber Christoph, du hast ja gesagt, dass der Intercept des Null Modells die Abweichung von 0.5 bei der mittleren Trial number (6.5) und in der Referenzkategorie von order (control-first) angibt, müssten wir dann nicht alle Prädiktoren gecentered mit ins Modell nehmen, wie folgt: 
-chance.test <-  glmer(correct ~ z.age + sex.c + z.trial + order.c + 
-                  (1 + z.trial || subj.id),
-    data = xdata.test, family = binomial, control = contr
-)
-```
-
-##Hier bin ich mir leider gar nicht sicher, ob wir hier noch einen Vergleich rechnen würden, oder ob wir uns nur den p-wert des intercepts im Summary anschauen würden. 
+ 
