--- a/power_analysis/power_analysis_binomial_GLMM_Exp3.Rmd
+++ b/power_analysis/power_analysis_binomial_GLMM_Exp3.Rmd
@@ -104,11 +104,11 @@ r.effects <- c(0.175, 0.35, 0.7) # random effects to be simulated
 
 r.slope.con <- c(0.45, 0.9)
 # with the intercept being -0.8938179 (qlogis(1/3)-qlogis(0.55)) we could make the following
-# guesses for the random intercept:
-#- 0.225: tiny random intercepts effect
-#- 0.45: moderate random intercepts effect
-#- 0.9: strong random intercepts effect
-#- 1.8: very strong random intercepts effect
+# guesses for the random slope:
+#- 0.225: tiny random slopes effect
+#- 0.45: moderate random slopes effect
+#- 0.9: strong random slopes effect
+#- 1.8: very strong random slopes effect
 
 r.slope.trial <- 0.1
 #r.slope.order <- 0.1 #if order is included as within-subject factor.
